--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -532,6 +532,20 @@
             }
         }
     }
+
+    div[data-type="jumpLink"] {
+        @apply text-sm relative rounded inline-flex items-center bg-gray-200 text-gray-700 dark:bg-gray-800 dark:text-gray-200;
+
+        &::before {
+            content: '#';
+            display: inline-block;
+            @apply py-1 px-2 bg-gray-300 rounded-l dark:bg-gray-900;
+        }
+
+        > span {
+            @apply py-1 px-2;
+        }
+    }
 }
 
 .dark {
